file links fixed

--- a/ldt.html
+++ b/ldt.html
@@ -84,7 +84,7 @@
 											</header>
 											<p>Master's Project for the LDT program <br /> All too often, the only assessments high school students get in school are content-based and summative, resulting in low self-confidence and fixed mindsets for "underachieving" students.  <br /> With Peloton, a skills map will assign students competencies in skills that traditional assessments do not capture. Students will then give feedback to their peers on those skills, thus allowing them to learn from each other and gain self-efficacy and confidence through peer teaching.  </p> 
 											<ul class="actions">
-												<li><a href="pelotonProjectReport.pdf" class="button">Progress report</a></li>
+												<li><a href="images/pelotonProjectReport.pdf" class="button">Progress report</a></li>
 											</ul>
 										</div>
 									</div>
@@ -100,7 +100,7 @@
 											</header>
 											<p> Design thinking project developed at a d.school studio-based course. <br/>  This quarter we worked with women's leadership organizations. My team partnered with the Stanford Clayman Institute to help with a new mentorship program for high school girls interested in STEM. <br/> My team designed an outreach program and toolkit for the organization. </p>
 											<ul class="actions">
-												<li><a href="seeds_of_change_report.pdf" class="button">Final report</a></li>
+												<li><a href="images/seeds_of_change_report.pdf" class="button">Final report</a></li>
 											</ul>
 										</div>
 									</div>
@@ -117,7 +117,7 @@
 											<p>A Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.<br /> The project combined ideas from Freire—helping learners make sense of and take ownership of their social environment-with a technological approach.<br /> Completed with Po Tsui as final project for Beyond Bits and Atoms course at the Stanford GSE.</p>
 											<ul class="actions">
 												<li><a href="https://www.youtube.com/watch?v=Ro8TTlYSRcE&feature=youtu.be" class="button">Demo video</a></li>
-												<li><a href="sharedStoryReport.pdf" class="button">Final report</a></li>
+												<li><a href="images/sharedStoryReport.pdf" class="button">Final report</a></li>
 											</ul>
 										</div>
 									</div>
@@ -149,7 +149,7 @@
 											</header>
 											<p>A pirate-themed board game that teaches middle-school-age learners about the principles of computer programming and game design. <br />After defining the need through interviews with a middle school student, we designed and built the board game<br />Components included a laser-cut box, 3D printed game pieces, vinyl-cut board pieces, and more.</p>
 											<ul class="actions">
-												<li><a href="vitaminSeaReport.pdf" class="button">Game instructions</a></li>
+												<li><a href="images/vitaminSeaReport.pdf" class="button">Game instructions</a></li>
 											</ul>
 										</div>
 									</div>
@@ -165,7 +165,7 @@
 											</header>
 											<p>In my internship I worked on user experience research for re-designing Autodesk's  micro-credentialing system on their online learning content, specifically for Fusion 360. <br /> I had to create and post surveys on the online learning platform and analyze the data, carry out interviews with university and community college students learning to use Fusion 360, and combine this quantitative and qualitative data into actionable insights. </p>
 											<ul class="actions">
-												<li><a href="adsk.html" class="button">Learn more</a></li>
+												<li><a href="ldt.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
