--- a/ldt.html
+++ b/ldt.html
@@ -82,7 +82,7 @@
 											<header class="major">
 												<h3>Peloton: A Teamwork Tool for the Classroom</h3>
 											</header>
-											<p>Master's Project for the LDT program <br /> All too often, the only assessments high school students get in school are content-based and summative, resulting in low self-confidence and fixed mindsets for "underachieving" students.  <br /> With Peloton, a skills map will assign students competencies in skills that traditional assessments do not capture. Students will then give feedback to their peers on those skills, thus allowing them to learn from each other and gain self-efficacy and confidence through peer teaching.  </p> 
+											<p>Master's Project for the LDT program, working with Nina Slote<br /> All too often, the only assessments high school students get in school are content-based and summative, resulting in low self-confidence and fixed mindsets for "underachieving" students.  <br /> With Peloton, a skills map will assign students competencies in skills that traditional assessments do not capture. Students will then give feedback to their peers on those skills, thus allowing them to learn from each other and gain self-efficacy and confidence through peer teaching.  </p> 
 											<ul class="actions">
 												<li><a href="images/pelotonProjectReport.pdf" class="button">Progress report</a></li>
 											</ul>
