Added summer quarter projects and courses, updated Master's Project section

--- a/ldt.html
+++ b/ldt.html
@@ -82,9 +82,11 @@
 											<header class="major">
 												<h3>Peloton: A Teamwork Tool for the Classroom</h3>
 											</header>
-											<p>Master's Project for the LDT program, working with Nina Slote<br /> All too often, the only assessments high school students get in school are content-based and summative, resulting in low self-confidence and fixed mindsets for "underachieving" students.  <br /> With Peloton, a skills map will assign students competencies in skills that traditional assessments do not capture. Students will then give feedback to their peers on those skills, thus allowing them to learn from each other and gain self-efficacy and confidence through peer teaching.  </p> 
+											<p>Master's Project for the LDT program, working with Nina Slote.<br/> Peloton is a web application for the classroom that helps students gain confidence in their social and emotional skills by designating them as experts in group work settings.<br/> Students self-assess on soft skills, generating a skills map and assigning students a role in a team. Students then give feedback to their peers based on their respective roles.<br/> We designed the interface using Figma, directed a programmer who built it using the MEVN stack, and integrated it with the Google Classroom API. </p> 
 											<ul class="actions">
-												<li><a href="images/pelotonProjectReport.pdf" class="button">Progress report</a></li>
+												<li><a href="http://pelotonapp.org/" class="button">Live beta version</a></li>
+												<li><a href="images/pelotonProjectReport.pdf" class="button">Final report</a></li>
+												<li><a href="https://youtu.be/G0SsJ9sKByo" class="button">Video</a></li>
 											</ul>
 										</div>
 									</div>
@@ -114,7 +116,7 @@
 											<header class="major">
 												<h3>Shared Story</h3>
 											</header>
-											<p>A Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.<br /> The project combined ideas from Freire—helping learners make sense of and take ownership of their social environment-with a technological approach.<br /> Completed with Po Tsui as final project for Beyond Bits and Atoms course at the Stanford GSE.</p>
+											<p>A Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.<br /> The project combined ideas from Brazilian educator Paulo Freire—helping learners understand and control their social environment-with a technological approach.<br /> Completed with Po Tsui as a final project for Beyond Bits and Atoms course at the Stanford GSE.</p>
 											<ul class="actions">
 												<li><a href="https://www.youtube.com/watch?v=Ro8TTlYSRcE&feature=youtu.be" class="button">Demo video</a></li>
 												<li><a href="images/sharedStoryReport.pdf" class="button">Final report</a></li>
@@ -131,7 +133,7 @@
 											<header class="major">
 												<h3>Super Photo App</h3>
 											</header>
-											<p>Simple photo app built for CS142 using the MEAN stack: MongoDB, Express.js, Node.js, and Angular.js <br />  Has an Instagram-lite functionality: can register new users, add photos, like photos, create a favorites list, and see other user profiles. <br /> Built on top of back-end files and main controller from the CS142 team, but the design and front-end components, as well as the backend HTTP request handlers in the server, are my own. </p>
+											<p>Simple photo app built for the CS142 course using the MEAN stack: MongoDB, Express.js, Node.js, and Angular.js <br />  Has an Instagram-lite functionality: can register new users, add photos, like photos, create a favorites list, and see other user profiles. <br /> Built on top of back-end files and main controller from the CS142 team, but the design and front-end components, as well as the backend HTTP request handlers in the server, are my own. </p>
 											<ul class="actions">
 												<li><a href="https://www.youtube.com/watch?v=B1HoyuhgnHo" class="button">Demo video</a></li>
 											</ul>
@@ -170,6 +172,22 @@
 										</div>
 									</div>
 								</section>
+								<section>
+									<a href="ldt.html" class="image">
+										<img src="images/stagingIgnite.png" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Stanford Ignite program at the Graduate School of Business</h3>
+											</header>
+											<p>I participated in the Ignite program, where I learned from distinguished Graduate School of Business faculty members in areas such as marketing, negotiations, accounting, and more. <br />We also created a business model for a potential venture, and pitched the idea to Silicon Valley venture capitalists. Our venture idea was a company that would run large-scale urban treasure hunts. It would be a combination of an urban marathon and a massive, outdoor escape-the-room, with a large cash prize for the winners. </p>
+											<ul class="actions">
+												<li><a href="https://www.gsb.stanford.edu/exec-ed/programs/stanford-ignite-full-time" class="button">Program information</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 							</section>
 							<section id="one">
 								<div class="inner">
@@ -202,6 +220,11 @@
 										<p>CS106B: Programming Abstractions</p>
 										<p>CS142: Web Applications</p>
 										<p>CHINLANG43: Intermedia-Advanced Chinese Conversation</p>										
+									</dd>
+									<dt>Summer 2018</dt>
+									<dd>										
+										<p>Stanford GSB: Ignite Executive Education Program</p>
+										<p>EDUC229: Learning, Design, & Technology Seminar</p>
 									</dd>
 								</dl>
 							</section>
