--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</header>
 							<div class="content">
 								<p>Soy un chileno medio agringado y semi-nómade, interesado en educación, historia, urbanismo, economía, China, Chile, y más.  Ahora estoy haciendo un Master en Educación en Stanford, enfocado en aprendizaje, diseño, y tecnología.<br /> <br />
-								I am a somewhat Americanized Chilean (“agringado”), an educator, consultant, traveler, and writer.  After some time in China and back in Chile, I am now at Stanford University pursing a Master’s Degree in Learning, Design, and Technology.</p>
+								I am a somewhat Americanized Chilean (“agringado”), an educator, consultant, traveler, and writer.  After some time in China and back in Chile, I am now at Stanford University pursuing a Master’s Degree in Learning, Design, and Technology.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">See more</a></li>
 									<li><a href="resume_dsalvatierra_apr_2018" class="button next scrolly">Resume</a></li>
