Added Mineduc and blogs

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hola. Hello.</h1>
+								<h1>Hello. Hola.</h1>
 							</header>
 							<div class="content">
-								<p>Soy un chileno medio agringado y semi-nómade, interesado en educación, historia, urbanismo, economía, China, Chile, y más.  Ahora estoy haciendo un Master en Educación en Stanford, enfocado en aprendizaje, diseño, y tecnología.<br /> <br />
-								I am a somewhat Americanized Chilean (“agringado”), an educator, consultant, traveler, and writer.  After some time in China and back in Chile, I am now at Stanford University pursuing a Master’s Degree in Learning, Design, and Technology.</p>
+								<p>Education innovator eager to build the future of learning. Talk to me about history, my time in China, long-distance bicycle tours, or building a house in Patagonia. Chilean.<br /> <br />
+								Líder educativo motivado por construir el futuro del aprendizaje. Conversemos de historia, mi tiempo en China, ciclismo de larga distancia, o sobre cómo construir una casa en el sur de Chile.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">See more</a></li>
-									<li><a href="resume_dsalvatierra_apr_2018" class="button next scrolly">Resume</a></li>
-
+									<li><a href="#one" class="button next scrolly">See more</a></li><br/> <br/> 
+									<li><a href="resume_dsalvatierra_apr_2018" class="button">Resume</a></li> <br/> <br/> 
+									<li><a href="https://www.linkedin.com/in/diegosalva/" class="button">LinkedIn</a></li>
 								</ul>
 							</div>
 						</div>
@@ -68,8 +68,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="ldt.html" class="link">Stanford LDT ePortfolio</a></h3>
-										<p>Courses and Projects</p>
+										<h3><a href="ldt.html" class="link">Stanford Portfolio</a></h3>
+										<p>Projects in Learning, Design, & Technology</p>
 									</header>
 								</article>
 								<article>
@@ -77,35 +77,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="ldt.html" class="link">Education in Chile</a></h3>
-										<p>Research and Projects</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="ldt.html" class="link">Other Chilean Stuff</a></h3>
-										<p>Public Policy and Business</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="ldt.html" class="link">China</a></h3>
-										<p>Education and Tech</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="ldt.html" class="link">Published pieces</a></h3>
-										<p>My writing samples</p>
+										<h3><a href="mineduc.html" class="link">Education in Chile</a></h3>
+										<p>Ministry Innovation Center</p>
 									</header>
 								</article>
 								<article>
@@ -113,8 +86,35 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Blog</a></h3>
-										<p>Assorted thoughts in English and Spanish</p>
+										<h3><a href="https://floodedforest.substack.com/" class="link">Flooded Forest</a></h3>
+										<p>Substack about building a house in the woods in Patagonia</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Medium</a></h3>
+										<p>Articles on China and education</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://diegosalvatierra.wordpress.com/" class="link">Other writings</a></h3>
+										<p>Articles on Chilean education policy, China, and published writings</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="http://www.laputaproject.com/2645.html" class="link">Impulsa 智行学社</a></h3>
+										<p>Soft skills and social innovation curriculum in English and Chinese</p>
 									</header>
 								</article>
 							</section>
@@ -172,7 +172,7 @@
 						</div>
 					</section>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
@@ -186,7 +186,7 @@
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
