--- a/ldt.html
+++ b/ldt.html
@@ -91,7 +91,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+								<!-- <section>
 									<a href="ldt.html" class="image">
 										<img src="images/seeds_front.png" alt="" data-position="top center" />
 									</a>
@@ -106,7 +106,7 @@
 											</ul>
 										</div>
 									</div>
-								</section>
+								</section>-->
 								<section>
 									<a href="ldt.html" class="image">
 										<img src="images/bba_demo.png" alt="" data-position="25% 25%" />
@@ -273,7 +273,7 @@
 						</div>
 					</section>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
@@ -285,7 +285,7 @@
 							</ul>
 						
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
