--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Medium</a></h3>
-										<p>Articles on China and education</p>
+										<h3><a href="https://diegosalvatierra.wordpress.com/" class="link">Other writings</a></h3>
+										<p>Articles on Chilean education policy, China, and published writings</p>
 									</header>
 								</article>
 								<article>
@@ -104,8 +104,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://diegosalvatierra.wordpress.com/" class="link">Other writings</a></h3>
-										<p>Articles on Chilean education policy, China, and published writings</p>
+										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Medium</a></h3>
+										<p>Articles on China and education</p>
 									</header>
 								</article>
 								<article>
@@ -130,7 +130,7 @@
 
 					</div>
 
-				<!-- Contact -->
+				<!-- Contact 
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -170,7 +170,7 @@
 								</section>							
 							</section>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer 
 					<footer id="footer">
