--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h1>Hello. Hola.</h1>
 							</header>
 							<div class="content">
-								<p>Education innovator eager to build the future of learning. Talk to me about history, my time in China, long-distance bicycle tours, or building a house in Patagonia.<br /> <br />
+								<p>Education innovator eager to build the future of learning. You can also talk to me about history, China, long-distance bicycle tours, or building a house in Patagonia.<br /> <br />
 								Líder educativo motivado por construir el futuro del aprendizaje. Conversemos de historia, mi tiempo en China, ciclismo de larga distancia, o sobre cómo construir una casa en el sur de Chile.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">See more</a></li><br/> <br/> 
