added figma portfolio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								Líder educativo motivado por construir el futuro del aprendizaje. Conversemos de historia, mi tiempo en China, ciclismo de larga distancia, o sobre cómo construir una casa en el sur de Chile.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">See more</a></li><br/> <br/> 
-									<li><a href="images/Diego Salvatierra.pdf" class="button">Resume</a></li> <br/> <br/> 
+									<li><a href="https://www.figma.com/file/MPvnIACrVxPBfVcSz6MtKs/Portfolio?node-id=2%3A5926" class="button">Portfolio</a></li> <br/> <br/> 
 									<li><a href="https://www.linkedin.com/in/diegosalva/" class="button">LinkedIn</a></li>
 								</ul>
 							</div>
