added figma and react, modified bio

--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
 								<h1>Hello. Hola.</h1>
 							</header>
 							<div class="content">
-								<p>Education innovator eager to build the future of learning. You can also talk to me about history, China, long-distance bicycle tours, or building a house in Patagonia.<br /> <br />
-								Líder educativo motivado por construir el futuro del aprendizaje. Conversemos de historia, mi tiempo en China, ciclismo de larga distancia, o sobre cómo construir una casa en el sur de Chile.</p>
+								<p>Tech, design, and education leader. You can also talk to me about history, China, long-distance bicycle tours, or building a house in Patagonia.<br /> <br />
+								Tecnología, diseño, y educación. Conversemos de historia, mi tiempo en China, ciclismo de larga distancia, o sobre cómo construir una casa en el sur de Chile.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">See more</a></li><br/> <br/> 
-									<li><a href="https://www.figma.com/file/MPvnIACrVxPBfVcSz6MtKs/Portfolio?node-id=2%3A5926" class="button">Portfolio</a></li> <br/> <br/> 
 									<li><a href="https://www.linkedin.com/in/diegosalva/" class="button">LinkedIn</a></li>
 								</ul>
 							</div>
@@ -65,29 +64,11 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="ldt.html" class="link">Stanford Portfolio</a></h3>
-										<p>Projects in Learning, Design, & Technology</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="mineduc.html" class="link">Education in Chile</a></h3>
-										<p>Ministry Innovation Center</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://floodedforest.substack.com/" class="link">Flooded Forest</a></h3>
-										<p>Substack about building a house in the woods in Patagonia</p>
+										<h3><a href="https://floodedforest.substack.com/" class="link">React ⚛️</a></h3>
+										<p>Quick projects I've built to learn React</p>
 									</header>
 								</article>
 								<article>
@@ -95,17 +76,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://diegosalvatierra.wordpress.com/" class="link">Other writings</a></h3>
-										<p>Articles on Chilean education policy, China, and published writings</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Medium</a></h3>
-										<p>Articles on China and education</p>
+										<h3><a href="https://www.figma.com/file/MPvnIACrVxPBfVcSz6MtKs/Portfolio?node-id=2%3A5926" class="link">Figma 🎨</a></h3>
+										<p>Design portfolio on Figma: logos, web apps, dapps, and more</p>
 									</header>
 								</article>
 								<article>
@@ -113,13 +85,58 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="http://www.laputaproject.com/2645.html" class="link">Impulsa 智行学社</a></h3>
+										<h3><a href="https://floodedforest.substack.com/" class="link">Flooded Forest 🌄</a></h3>
+										<p>Substack about building a house in the woods in Patagonia</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="mineduc.html" class="link">Education in Chile 🏫</a></h3>
+										<p>Ministry Innovation Center</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Medium ✍</a></h3>
+										<p>Short stories and writings on web3 and UX</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="ldt.html" class="link">Stanford Portfolio 🌲</a></h3>
+										<p>Projects in Learning, Design, & Technology</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="http://www.laputaproject.com/2645.html" class="link">Impulsa 智行学社 🚀</a></h3>
 										<p>Soft skills and social innovation curriculum in English and Chinese</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://diegosalvatierra.wordpress.com/" class="link">Other writings 📖</a></h3>
+										<p>Articles on Chilean education policy, China, and published writings</p>
 									</header>
 								</article>
 							</section>
 
-						<!-- Two -->
+						<!-- Two 
 							<section id="two">
 								<div class="inner">								
 									<ul class="actions">
@@ -128,7 +145,7 @@
 								</div>
 							</section>
 
-					</div>
+					</div> -->
 
 				<!-- Contact 
 					<section id="contact">
