added react portfolio, moved sections, updated resume

--- a/index.html
+++ b/index.html
@@ -22,36 +22,38 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Diego</strong> <span>Salvatierra</span></a>
-						<nav>
+						<!--<nav>
 							<a href="#menu">Menu</a>
-						</nav>
+						</nav> -->
 					</header>
 
-				<!-- Menu -->
+				<!-- Menu 
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="ldt.html">LDT Projects</a></li>
+							<li><a href="ldt.html">Stanford Projects</a></li>
 							<li><a href="generic.html">Other Projects</a></li>
 							<li><a href="elements.html">Blog</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">See more</a></li>
 						</ul>
-					</nav>
-
+					</nav> -->
+-->
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hello. Hola.</h1>
+								<h1>Hello. Hola. 👋</h1>
 							</header>
 							<div class="content">
 								<p>Tech, design, and education leader. You can also talk to me about history, China, long-distance bicycle tours, or building a house in Patagonia.<br /> <br />
 								Tecnología, diseño, y educación. Conversemos de historia, mi tiempo en China, ciclismo de larga distancia, o sobre cómo construir una casa en el sur de Chile.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">See more</a></li><br/> <br/> 
-									<li><a href="https://www.linkedin.com/in/diegosalva/" class="button">LinkedIn</a></li>
+									<li><a href="https://www.linkedin.com/in/diegosalva/" class="button">LinkedIn</a></li><br/> <br/> 
+									<li><a href="DS resume 7.2022.pdf" class="button">Resume</a></li>
+
 								</ul>
 							</div>
 						</div>
@@ -67,8 +69,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://floodedforest.substack.com/" class="link">React ⚛️</a></h3>
-										<p>Quick projects I've built to learn React</p>
+										<h3><a href="react.html" class="link">Coding ⚛️</a></h3>
+										<p>Quick projects I've built to learn React and more </p>
 									</header>
 								</article>
 								<article>
@@ -76,7 +78,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.figma.com/file/MPvnIACrVxPBfVcSz6MtKs/Portfolio?node-id=2%3A5926" class="link">Figma 🎨</a></h3>
+										<h3><a href="https://www.figma.com/file/MPvnIACrVxPBfVcSz6MtKs/Portfolio?node-id=2%3A5926" class="link">Design 🎨</a></h3>
 										<p>Design portfolio on Figma: logos, web apps, dapps, and more</p>
 									</header>
 								</article>
