--- a/ldt.html
+++ b/ldt.html
@@ -23,9 +23,9 @@
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
 						<a href="index.html" class="logo"><strong>Diego</strong> <span>Salvatierra</span></a>
-						<nav>
+						<!-- <nav>
 							<a href="#menu">Menu</a>
-						</nav>
+						</nav> -->
 					</header>
 
 				<!-- Menu -->
@@ -209,7 +209,7 @@
 									</dd>
 									<dt>Winter 2018</dt>
 									<dd>										
-										<p>EDUC211: Beyond Bits and Atoms Lab</p>
+										<p>CS402L: Beyond Bits and Atoms Lab</p>
 										<p>EDUC236: Designing Technological Tools</p>
 										<p>ENGR281: Designing Media that Matters</p>
 										<p>ENGR281: Design Thinking Studio</p>										
@@ -219,7 +219,7 @@
 										<p>EDUC391: Engineering Education and Online Learning</p>
 										<p>CS106B: Programming Abstractions</p>
 										<p>CS142: Web Applications</p>
-										<p>CHINLANG43: Intermedia-Advanced Chinese Conversation</p>										
+										<p>CHINLANG43: Intermediate-Advanced Chinese Conversation</p>										
 									</dd>
 									<dt>Summer 2018</dt>
 									<dd>										
@@ -231,7 +231,7 @@
 
 					</div>
 
-				<!-- Contact -->
+				<!-- Contact 
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -271,7 +271,7 @@
 								</section>	
 							</section>
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Footer 
 					<footer id="footer">
