--- a/mineduc.html
+++ b/mineduc.html
@@ -23,12 +23,12 @@
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
 						<a href="index.html" class="logo"><strong>Diego</strong> <span>Salvatierra</span></a>
-						<nav>
+						<!-- <nav>
 							<a href="#menu">Menu</a>
-						</nav>
+						</nav> -->
 					</header>
 
-				<!-- Menu -->
+				<!-- Menu
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
@@ -40,7 +40,7 @@
 							<li><a href="#" class="button special fit">See more</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
-					</nav>
+					</nav>  -->
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
